API - Refactoring Game Serialization testing